Fix jtreg test failure when Intel APX is enabled for KNL platforms

XMLWordPrintable

    • b16
    • x86
    • generic

        JTreg compiler test in test/hotspot/jtreg/compiler/loopopts/superword/TestDependencyOffsets.java fails with the following error message

        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (jdk/src/hotspot/cpu/x86/assembler_x86.cpp:13015), pid=2522730, tid=2522757
        # assert(((!attributes->uses_vl()) || (attributes->get_vector_len() == AVX_512bit) || (!_legacy_mode_vl) || (attributes->is_legacy_mode()))) failed: XMM register should be 0-15
        #

        This happens when Intel APX is enabled for KNL platforms. It turns out that APX must be disabled for KNL but this is not the case currently.

              Assignee:
              Srinivas Parasa
              Reporter:
              Srinivas Parasa
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: