8367694: Fix jtreg test failure when Intel APX is enabled for KNL platforms